# claud-auth-indev

./: .gitignore  AGENTS.md  README.md  package.json
docs/: oauth-flow.excalidraw  test.excalidraw
dotnet-claude-oauth/: AGENTS.md  ClaudeOAuth.sln  justfile
dotnet-claude-oauth/ClaudeOAuth/: ClaudeOAuth.csproj  Client.cs  Constants.cs  Models.cs  OAuth.cs  Pkce.cs  Storage.cs
dotnet-claude-oauth/ClaudeOAuth.Cli/: ClaudeOAuth.Cli.csproj  Program.cs
dotnet-claude-oauth/ClaudeOAuth.Tests/: ClaudeOAuth.Tests.csproj  ClientTests.cs  OAuthTests.cs  PkceTests.cs  StorageTests.cs  VisionIntegrationTests.cs
python/: README.md  pyproject.toml
python/claude_oauth/: __init__.py  cli.py  client.py  constants.py  oauth.py  pkce.py  storage.py
scripts/: export-excalidraw.ts
src/: cli-utils.ts  cli.test.ts  cli.ts  index.ts  vision.test.ts
src/__fixtures__/: sample.txt
src/lib/: client.ts  constants.ts  oauth.ts  pkce.ts  storage.ts
test/: test.py
